lib/src/box2d/ffi/box2d_bindings.dart

// AUTO-GENERATED — do not edit.
// Regenerate with: dart run ffigen --config ffigen.yaml
// ignore_for_file: type=lint, camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Dart FFI bindings generated from box2d_wrapper.h. Only the public C wrapper surface is parsed — Box2D internal headers are excluded via include-directives.
///
class Box2DBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  Box2DBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  Box2DBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Create a Box2D world with a native thread pool injected into the task system.
  /// numThreads <= 0 → hardware_concurrency - 1.
  /// Returns packed int64 world handle; 0 on failure.
  int b2w_createWorld(double gravityX, double gravityY, int numThreads) {
    return _b2w_createWorld(gravityX, gravityY, numThreads);
  }

  late final _b2w_createWorldPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int64 Function(ffi.Float, ffi.Float, ffi.Int32)>
      >('b2w_createWorld');
  late final _b2w_createWorld = _b2w_createWorldPtr
      .asFunction<int Function(double, double, int)>();

  /// Destroy a Box2D world and its associated thread pool.
  /// The pool is destroyed AFTER b2DestroyWorld to allow any in-flight
  /// finishTask calls to complete.
  void b2w_destroyWorld(int worldHandle) {
    return _b2w_destroyWorld(worldHandle);
  }

  late final _b2w_destroyWorldPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
        'b2w_destroyWorld',
      );
  late final _b2w_destroyWorld = _b2w_destroyWorldPtr
      .asFunction<void Function(int)>();

  /// Advance the simulation by timeStep seconds with subSteps internal iterations.
  /// Box2D 3.0 recommends subSteps = 4 for most games.
  void b2w_step(int worldHandle, double timeStep, int subSteps) {
    return _b2w_step(worldHandle, timeStep, subSteps);
  }

  late final _b2w_stepPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Float, ffi.Int32)>
      >('b2w_step');
  late final _b2w_step = _b2w_stepPtr
      .asFunction<void Function(int, double, int)>();

  /// Overwrite world gravity at runtime.
  void b2w_setGravity(int worldHandle, double gx, double gy) {
    return _b2w_setGravity(worldHandle, gx, gy);
  }

  late final _b2w_setGravityPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Float, ffi.Float)>
      >('b2w_setGravity');
  late final _b2w_setGravity = _b2w_setGravityPtr
      .asFunction<void Function(int, double, double)>();

  /// Create a dynamic (simulated) body. Returns packed int64 body handle.
  int b2w_createDynamicBody(
    int worldHandle,
    double posX,
    double posY,
    double angle,
  ) {
    return _b2w_createDynamicBody(worldHandle, posX, posY, angle);
  }

  late final _b2w_createDynamicBodyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int64 Function(ffi.Int64, ffi.Float, ffi.Float, ffi.Float)
        >
      >('b2w_createDynamicBody');
  late final _b2w_createDynamicBody = _b2w_createDynamicBodyPtr
      .asFunction<int Function(int, double, double, double)>();

  /// Create a static (immovable) body. Returns packed int64 body handle.
  int b2w_createStaticBody(
    int worldHandle,
    double posX,
    double posY,
    double angle,
  ) {
    return _b2w_createStaticBody(worldHandle, posX, posY, angle);
  }

  late final _b2w_createStaticBodyPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int64 Function(ffi.Int64, ffi.Float, ffi.Float, ffi.Float)
        >
      >('b2w_createStaticBody');
  late final _b2w_createStaticBody = _b2w_createStaticBodyPtr
      .asFunction<int Function(int, double, double, double)>();

  /// Destroy a body and detach all its shapes.
  void b2w_destroyBody(int bodyHandle) {
    return _b2w_destroyBody(bodyHandle);
  }

  late final _b2w_destroyBodyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
        'b2w_destroyBody',
      );
  late final _b2w_destroyBody = _b2w_destroyBodyPtr
      .asFunction<void Function(int)>();

  /// Attach a circle fixture to a body.
  void b2w_addCircleShape(
    int bodyHandle,
    double radius,
    double density,
    double friction,
    double restitution,
  ) {
    return _b2w_addCircleShape(
      bodyHandle,
      radius,
      density,
      friction,
      restitution,
    );
  }

  late final _b2w_addCircleShapePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
          )
        >
      >('b2w_addCircleShape');
  late final _b2w_addCircleShape = _b2w_addCircleShapePtr
      .asFunction<void Function(int, double, double, double, double)>();

  /// Attach a box (axis-aligned rectangle) fixture. halfW/halfH are half-extents.
  void b2w_addBoxShape(
    int bodyHandle,
    double halfW,
    double halfH,
    double density,
    double friction,
    double restitution,
  ) {
    return _b2w_addBoxShape(
      bodyHandle,
      halfW,
      halfH,
      density,
      friction,
      restitution,
    );
  }

  late final _b2w_addBoxShapePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
            ffi.Float,
          )
        >
      >('b2w_addBoxShape');
  late final _b2w_addBoxShape = _b2w_addBoxShapePtr
      .asFunction<void Function(int, double, double, double, double, double)>();

  /// Attach a convex polygon fixture.
  /// verts: interleaved (x0,y0, x1,y1, ...) array of `count` vertices.
  /// Box2D 3.0 will compute the convex hull internally.
  void b2w_addPolygonShape(
    int bodyHandle,
    ffi.Pointer<ffi.Float> verts,
    int count,
    double density,
    double friction,
    double restitution,
  ) {
    return _b2w_addPolygonShape(
      bodyHandle,
      verts,
      count,
      density,
      friction,
      restitution,
    );
  }

  late final _b2w_addPolygonShapePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<ffi.Float>,
            ffi.Int32,
            ffi.Float,
            ffi.Float,
            ffi.Float,
          )
        >
      >('b2w_addPolygonShape');
  late final _b2w_addPolygonShape = _b2w_addPolygonShapePtr
      .asFunction<
        void Function(int, ffi.Pointer<ffi.Float>, int, double, double, double)
      >();

  /// Apply a force at the body's mass centre (accumulates until next step).
  void b2w_applyForce(int bodyHandle, double fx, double fy) {
    return _b2w_applyForce(bodyHandle, fx, fy);
  }

  late final _b2w_applyForcePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Float, ffi.Float)>
      >('b2w_applyForce');
  late final _b2w_applyForce = _b2w_applyForcePtr
      .asFunction<void Function(int, double, double)>();

  /// Apply an instantaneous linear impulse at the body's mass centre.
  void b2w_applyLinearImpulse(int bodyHandle, double ix, double iy) {
    return _b2w_applyLinearImpulse(bodyHandle, ix, iy);
  }

  late final _b2w_applyLinearImpulsePtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Float, ffi.Float)>
      >('b2w_applyLinearImpulse');
  late final _b2w_applyLinearImpulse = _b2w_applyLinearImpulsePtr
      .asFunction<void Function(int, double, double)>();

  /// Apply a torque (angular force) to the body.
  void b2w_applyTorque(int bodyHandle, double torque) {
    return _b2w_applyTorque(bodyHandle, torque);
  }

  late final _b2w_applyTorquePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Float)>>(
        'b2w_applyTorque',
      );
  late final _b2w_applyTorque = _b2w_applyTorquePtr
      .asFunction<void Function(int, double)>();

  /// Directly set the linear velocity (bypasses force accumulation).
  void b2w_setLinearVelocity(int bodyHandle, double vx, double vy) {
    return _b2w_setLinearVelocity(bodyHandle, vx, vy);
  }

  late final _b2w_setLinearVelocityPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Float, ffi.Float)>
      >('b2w_setLinearVelocity');
  late final _b2w_setLinearVelocity = _b2w_setLinearVelocityPtr
      .asFunction<void Function(int, double, double)>();

  /// ── Zero-copy bulk transform extraction ──────────────────────────────────────
  ///
  /// Designed for the hot path after each physics step.
  /// Both buffers are allocated by Dart via calloc and passed in — no heap
  /// allocation occurs inside this function.
  ///
  /// `handles`  Pointer to a Dart calloc<Int64>(n) buffer of packed body IDs.
  /// `buffer`   Pointer to a Dart calloc<Float>(n*6) buffer.
  /// Layout per body: [posX, posY, angle, velX, velY, 0.0f]
  /// `count`    Number of bodies.
  ///
  /// Dart reads the result via Pointer<Float>.asTypedList(n*6) — zero copy.
  void b2w_bulkExtractTransforms(
    ffi.Pointer<ffi.Int64> handles,
    ffi.Pointer<ffi.Float> buffer,
    int count,
  ) {
    return _b2w_bulkExtractTransforms(handles, buffer, count);
  }

  late final _b2w_bulkExtractTransformsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Int64>,
            ffi.Pointer<ffi.Float>,
            ffi.Int32,
          )
        >
      >('b2w_bulkExtractTransforms');
  late final _b2w_bulkExtractTransforms = _b2w_bulkExtractTransformsPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Float>, int)
      >();

  /// Number of begin-touch contact events from the last step.
  int b2w_getContactBeginCount(int worldHandle) {
    return _b2w_getContactBeginCount(worldHandle);
  }

  late final _b2w_getContactBeginCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int64)>>(
        'b2w_getContactBeginCount',
      );
  late final _b2w_getContactBeginCount = _b2w_getContactBeginCountPtr
      .asFunction<int Function(int)>();

  /// Read one begin-touch event by index.
  /// Writes packed body handles and contact normal into the out-parameters.
  void b2w_getContactBeginEvent(
    int worldHandle,
    int index,
    ffi.Pointer<ffi.Int64> outBodyA,
    ffi.Pointer<ffi.Int64> outBodyB,
    ffi.Pointer<ffi.Float> outNormalX,
    ffi.Pointer<ffi.Float> outNormalY,
  ) {
    return _b2w_getContactBeginEvent(
      worldHandle,
      index,
      outBodyA,
      outBodyB,
      outNormalX,
      outNormalY,
    );
  }

  late final _b2w_getContactBeginEventPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Int32,
            ffi.Pointer<ffi.Int64>,
            ffi.Pointer<ffi.Int64>,
            ffi.Pointer<ffi.Float>,
            ffi.Pointer<ffi.Float>,
          )
        >
      >('b2w_getContactBeginEvent');
  late final _b2w_getContactBeginEvent = _b2w_getContactBeginEventPtr
      .asFunction<
        void Function(
          int,
          int,
          ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Float>,
          ffi.Pointer<ffi.Float>,
        )
      >();

  /// Number of end-touch contact events from the last step.
  int b2w_getContactEndCount(int worldHandle) {
    return _b2w_getContactEndCount(worldHandle);
  }

  late final _b2w_getContactEndCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int64)>>(
        'b2w_getContactEndCount',
      );
  late final _b2w_getContactEndCount = _b2w_getContactEndCountPtr
      .asFunction<int Function(int)>();

  /// Read one end-touch event by index.
  void b2w_getContactEndEvent(
    int worldHandle,
    int index,
    ffi.Pointer<ffi.Int64> outBodyA,
    ffi.Pointer<ffi.Int64> outBodyB,
  ) {
    return _b2w_getContactEndEvent(worldHandle, index, outBodyA, outBodyB);
  }

  late final _b2w_getContactEndEventPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Int32,
            ffi.Pointer<ffi.Int64>,
            ffi.Pointer<ffi.Int64>,
          )
        >
      >('b2w_getContactEndEvent');
  late final _b2w_getContactEndEvent = _b2w_getContactEndEventPtr
      .asFunction<
        void Function(int, int, ffi.Pointer<ffi.Int64>, ffi.Pointer<ffi.Int64>)
      >();

  /// Install or replace the impact callback for a world.
  /// Pass NULL to remove the callback.
  void b2w_setImpactCallback(
    int worldHandle,
    ImpactCallbackFn callback,
    double speedThreshold,
  ) {
    return _b2w_setImpactCallback(worldHandle, callback, speedThreshold);
  }

  late final _b2w_setImpactCallbackPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ImpactCallbackFn, ffi.Float)
        >
      >('b2w_setImpactCallback');
  late final _b2w_setImpactCallback = _b2w_setImpactCallbackPtr
      .asFunction<void Function(int, ImpactCallbackFn, double)>();

  /// ── NativeFinalizer-compatible destructors ────────────────────────────────────
  ///
  /// NativeFinalizer requires a native function with signature void(void*).
  /// These wrappers receive the packed int64 handle reinterpreted as a void*
  /// token (set via Pointer<Void>.fromAddress(handle) on the Dart side), cast
  /// it back to int64_t, and call the real destroy function.
  /// Only used as safety-net GC finalizers — prefer explicit dispose().
  void b2w_finalizer_world(ffi.Pointer<ffi.Void> token) {
    return _b2w_finalizer_world(token);
  }

  late final _b2w_finalizer_worldPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'b2w_finalizer_world',
      );
  late final _b2w_finalizer_world = _b2w_finalizer_worldPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void b2w_finalizer_body(ffi.Pointer<ffi.Void> token) {
    return _b2w_finalizer_body(token);
  }

  late final _b2w_finalizer_bodyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'b2w_finalizer_body',
      );
  late final _b2w_finalizer_body = _b2w_finalizer_bodyPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();
}

/// ── NativeCallable.listener — cross-thread collision audio callback ───────────
///
/// Register a Dart function (via NativeCallable<ImpactCallbackC>.listener)
/// that fires on the Dart main isolate whenever a collision's approach speed
/// exceeds speedThreshold.
///
/// Box2D steps on worker threads; NativeCallable.listener safely marshals
/// the call to the main Dart isolate's event loop.
typedef ImpactCallbackFn =
    ffi.Pointer<ffi.NativeFunction<ImpactCallbackFnFunction>>;
typedef ImpactCallbackFnFunction =
    ffi.Void Function(ffi.Int64 bodyA, ffi.Int64 bodyB, ffi.Float speed);
typedef DartImpactCallbackFnFunction =
    void Function(int bodyA, int bodyB, double speed);
